<resources>

    <string name="app_name">TreantStandupTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="number_of_participants">Number of Participants</string>
    <string name="length_of_meeting">Length of Meeting</string>
    <string name="team">Team</string>
    <string name="digits">0123456789</string>
    <string name="start">START</string>

    
    <string name="settings_label">Settings</string>
      
      
      
      
    <string name="team_label">Teams</string>
    
    
    
    <string name="about_title">关于——标题栏</string>
    <string name="about_label">About</string>
    <string name="about_text">\
Standup Timer is a simple application that can be
used to keep your stand-up meetings on track.  It is free
and open source. Hey Man !StandUp Timer是一个能够用来跟踪记录您会议时间的简单应用，并且是免费开源的！
    </string>
    <string name="about_version">Standup Timer v1.4</string>
    <string name="about_copyright">&#169;2011\u00D8 by \u02ACJohn\u03C8 Wo\u21CE od\u01E3</string>
    <string name="about_author_email">treant1128@gmail.com</string>
    <string name="about_project_url">http://www.sohu.com</string>
    
    <string name="help_title">帮助的标题</string>
    <string name="help_label">Help</string>
       <string name="help_text">\
<b>General</b>
\n\n\
Simply specify the number of participants and the
meeting length, and press <b>Start</b> to get
started. On the timer screen, press <b>Next</b>
to restart the timer for a new meeting participant,
or <b>Finish</b> to stop the timer and end the meeting.
\n\n\
<b>Teams</b>
\n\n\
Standup Timer can be configured to keep track of
stand-up meetings for one or more teams.  Keeping
track of meetings for teams allows you to see average
statistics (average meeting length, average individual
status length, etc) for a given team.  You are also
able to see the detailed statistics for each meeting
that team has held.
\n\n\
<b>Creating a team</b>
\n\n\
To create a new team, select the <b>Teams</b> option from the
main menu.  On the Teams screen, select the <b>Add</b> option
from the menu to add a new team.
\n\n\
<b>Specifying a team when starting a timer</b>
\n\n\
Once a team has been created, you will be able to select
that team from the <b>Team</b> drop down menu when starting
a new meeting timer.  When the meeting is finished, statistics
for that meeting will be written to the database.
\n\n\
<b>Average meeting statistics for a team</b>
\n\n\
To access the statistics for a particular team, select
the <b>Teams</b> option from the main menu, and select
the team you wish to see statistics for.  The <b>Stats</b>
tab will show you the average statistics for that team.
The <b>Meetings</b> tab will show you the list of
meetings that team has held.
\n\n\
<b>Statistics for a specific meeting</b>
\n\n\
To see details about a specific meeting, select the meeting
from the list of meetings in the <b>Meetings</b> tab for
a given team.
   </string> 
    
    <string name="zero_start">00:00</string>
    <string name="five_min">五分钟</string>
    <string name="ten_min">十分钟</string>
    <string name="fifteen_min">十五分钟</string>
    <string name="twenty_min">二十分钟</string>
    <string name="valid_num_participants_warning_unlimited">参与人数必须大于1</string>
    <string name="valid_num_participants_warning">参与人数只能介于1到20</string>
    <string name="ok">晓得了</string>
    <string name="participant">Participant</string>
    <string name="next">下一位Start</string>
    <string name="total_time_remaining">总剩余时间</string>
    <string name="finished">GAME_OVER</string>
    <string name="individual_status_complete">Individual Status COMPLETE!!!</string>
     
</resources>