<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >

    <LinearLayout
        style="@style/commonStyle"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_content"
            style="@style/commonStyle"
            android:layout_marginTop="20dip"
            android:text="@string/about_text" />

        <TextView
            style="@style/commonStyle"
            android:layout_marginTop="10dip"
            android:text="@string/about_version" />

        <TextView
            style="@style/commonStyle"
            android:layout_marginTop="20dip"
            android:text="@string/about_copyright" />

        <TextView
            style="@style/commonStyle"
            android:layout_marginTop="20dip"
            android:text="@string/about_author_email" />

        <TextView
            android:id="@+id/project_url"
            style="@style/commonStyle"
            android:layout_marginTop="20dip"
            android:text="@string/about_project_url"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/about_ok"
            style="@style/commonStyle"
            android:layout_marginTop="10dip"
            android:text="@string/ok" />
    </LinearLayout>

</ScrollView>