<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/settings"
        android:alphabeticShortcut="s"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_label"/>
    <item
        android:id="@+id/teams"
        android:alphabeticShortcut="t"
        android:icon="@drawable/team"
        android:title="@string/team_label"/>
    <item
        android:id="@+id/about"
        android:alphabeticShortcut="a"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_label"/>
    <item
        android:id="@+id/help"
        android:alphabeticShortcut="h"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help_label"/>

</menu>