<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- layout_gravity-*自身在父容器中的位置              gravity*其中的子元素的位置 
    子元素要vertical居中  父容器的orientation得是horizontal 
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/participant_number"
            style="@style/commonStyle"
            android:text="@string/participant"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/individual_time_remaining"
            style="@style/commonStyle"
            android:layout_marginTop="5dip"
            android:text="@string/zero_start"
            android:textSize="50sp" />
        <Button 
            android:id="@+id/next_button"
            android:text="@string/next"
            style="@style/commonStyle"
            android:layout_marginTop="15dip"
            />
        <TextView 
            android:text="@string/total_time_remaining"
            style="@style/commonStyle"
            android:textSize="15sp"
            android:layout_marginTop="30dip"
            />
        <TextView
            android:id="@+id/total_time_remaining"
            android:text="@string/zero_start"
            android:textSize="35sp"
            style="@style/commonStyle"
            android:layout_marginTop="5dip"
            />
        <Button
            android:id="@+id/finished_button"
            android:text="@string/finished"
            style="@style/commonStyle"
           
            />
    </LinearLayout>

</LinearLayout>