<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ebc4b"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/commonStyle"
            android:text="@string/number_of_participants"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/num_participants"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:digits="@string/digits"
            android:gravity="center"
            android:inputType="phone"
            android:lines="1" />

        <TextView
            style="@style/commonStyle"
            android:paddingTop="20dp"
            android:text="@string/length_of_meeting"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/meeting_length_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center" />

        <TextView
            style="@style/commonStyle"
            android:paddingTop="20dp"
            android:text="@string/team"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/team_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dip"
            android:layout_marginRight="70dip"
            android:layout_marginTop="5dip" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>